# tinyorch

./: README.md  example.sh  install.sh  lib.sh  pyproject.toml  tinyorch.sh
examples/: dood_example.sh
tinyorch/: __init__.py  cli.py  core.py
