[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyorch"
version = "0.1.0"
description = "Tiny docker-orchestration helpers for container-based media workflows."
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/<you>/tinyorch"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinyorch*"]
