[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyorch"
version = "0.1.0"
description = "Tiny docker-orchestration helpers."
authors = [{ name = "Nash Spence" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/nashspence/tinyorch"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinyorch*"]
