[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyorch"
version = "0.1.0"
description = "Tiny docker-orchestration helpers."
authors = [{ name = "Nash Spence" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
notify           = "tinyorch.cli:main_notify"
get-password     = "tinyorch.cli:main_get_password"
run              = "tinyorch.cli:main_run"
run-parallel     = "tinyorch.cli:main_run_parallel"
keep-awake       = "tinyorch.cli:main_keep_awake"
prompt-enter     = "tinyorch.cli:main_prompt_enter"
burn-iso         = "tinyorch.cli:main_burn_iso"
ensure-docker-host = "tinyorch.cli:main_ensure_docker_host"
watch-darwin = "tinyorch.cli:main_watch_darwin"
watch-linux  = "tinyorch.cli:main_watch_linux"

[project.urls]
Homepage = "https://github.com/nashspence/tinyorch"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinyorch*"]
